<resources>
    <string name="app_name">Mobile Finance Mentor</string>
    <string name="vtb_logo">vtb logo</string>
    <string name="splash_title">ВТБ Финансы</string>

    <string name="why_must_i_invest">Инвестиции помогают накопить на обучение, путешествия, новую машину, дом в Испании, пенсию и на что угодно ещё. Чем раньше вы начнёте инвестировать, тем быстрее достигнете своей финансовой цели.

Инвестировать можно не только для того, чтобы получить доход. Грамотные инвестиции в разных валютах могут обезопасить вас от того, что конкретно в вашей стране произойдет кризис. Если в такой ситуации у вас наличные деньги — вы их потеряете. А если сбережения, например, в акциях иностранных компаний, то вы более защищены, так как вложили в экономику другой страны.</string>

    <string name="in_what_must_i_invest">Инвестировать можно в разные вещи: в недвижимость, золото, акции, облигации или собственный бизнес. Если инвестиции принесли доход, значит это было успешное вложение денег, если дохода нет — инвестиции оказались убыточными.

Некоторые люди инвестируют в бизнес — собственный или друзей и знакомых. Это может быть рискованно. Например, Всеволод создал стартап: молекулярное молоко для веганов. Вы подумали, что это перспективная тема, и решили вложить 50 000 ₽. Но веганы с подозрением отнеслись к этой затее, стартап провалился, а вы потеряли деньги.

Бизнес сталкивается с риском прогореть практически ежедневно, да и забрать свою долю в нужный момент зачастую затруднительно.

В России чаще всего инвестируют в недвижимость или просто кладут деньги на депозит — а это сложно назвать инвестициями. Часто таким способом можно просто сохранить деньги, но не приумножить их. Цены на недвижимость, вопреки распространенному мнению, не всегда растут. Например, в конце 2014 года цены на недвижимость резко выросли, а потом снижались 2−3 года. В итоге к прежним ценам недвижимость вернулась только в 2020 году.

Вложившись в конце 2014 года, вы бы просто сохранили свои средства, но ничего не заработали за 5−6 лет. Опять же, если вдруг понадобятся деньги, недвижимость не так просто продать, да и частично изъять деньги не получится.

Самые доступные способы инвестиций — акции, облигации и фонды. Их ещё называют ценными бумагами или активами. Раньше это были настоящие бумаги — с печатями и водяными знаками. Сейчас всё цифровое — покупают и продают активы через интернет, причем сделать это можно в любой момент. За ценными бумагами стоит реальный бизнес — фабрики,заводы, транспорт, персонал и многое другое. Надёжность такого бизнеса не сравнить, например, с овощной палаткой, которую могут закрыть в любой момент.</string>

    <string name="How_to_earn_money_on_invest">Заработать на инвестициях можно по-разному, доход зависит от выбранного инструмента. Цена акций может увеличиться, тогда можно продать их и получить прибыль от разницы в стоимости между покупкой и продажей. Часто по акциям компания платит дивиденды — часть прибыли. Обычно это какой-то процент, например: стоимость акции «Газпрома» — 166 ₽, дивидендная доходность — 8 %, значит, доход акционера 13,28 ₽.

По облигациям платят купон — обычно это фиксированный процент, но бывает и плавающая ставка.

Заработать можно больше, если доход от инвестиций не тратить, а снова инвестировать — покупать другие ценные бумаги или фонды. Это называется реинвестирование. Получается накопительный эффект — когда накопленные проценты прибавляются к сумме вклада и на эту увеличенную сумму уже начисляют новый процент. Вклад постоянно растёт, и сумма процентов, соответственно, тоже.

Если постоянно выводить полученный доход, то накопительного эффекта не будет. Даже если не брать в расчёт инвестиции, а посмотреть на вклад с невысокими процентами, то получается вот так:</string>

    <string name="how_much_time_you_spend_on_invest">Инвестировать можно на разный срок, хоть на день, хоть на 20 лет — зависит от вашей финансовой цели. Но от срока зависит, куда вкладывать, — чем больше срок, тем меньше риск и тем больше потенциальная доходность и эффект сложного процента. Например, облигации подойдут для краткосрочных вложений, на год-три, а акции — для долгосрочных, 10−20−30 лет.</string>

    <string name="how_to_start_invest">Чтобы начать инвестировать, не нужно иметь сразу несколько десятков тысяч рублей. Все гораздо проще — начать можно с нескольких сотен и постепенно увеличивать вложения.

Начинать лучше прямо сейчас. Каждый день в инвестициях — это деньги, и терять их — неразумно. Если начать сейчас, то уже через 10−20 лет у вас будет накоплен капитал, которым вы сможете распорядиться так, как считаете нужным. Например, купить автодом, путешествовать и жить на проценты. Или отправить учиться в Англию сына. Когда есть деньги — открывается много возможностей. И лучше ими воспользоваться раньше, чем никогда.

Начинать лучше с профессиональным брокером. Человек, который только начинает разбираться в инвестициях, может совершить ошибки и потерять деньги. Хороший брокер предложит вам обучающие сервисы, прогнозы по тому, будут ли ценные бумаги расти или падать, и даже личные рекомендации, — это называется инвестиционным консультированием. Это поможет вам не допустить банальных ошибок и успешно начать инвестировать.

Кроме того, без брокера вы не сможете инвестировать — все сделки на бирже может совершать только он.

В следующем уроке поговорим о том, что такое биржа, как выбрать брокера, открыть брокерский счёт и наконец-то сделать свою первую инвестицию.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>